fix site loading

--- a/docs/docs/_includes/_sidebar-inject.html
+++ b/docs/docs/_includes/_sidebar-inject.html
@@ -5,13 +5,13 @@
     </button>
   </div>
   <div class="sidebar-brand">
-    <a href="https://arrow-kt.io/docs/analysis">
-      <img src="{{ '/img/analysis.svg' | relative_url }}" alt="Arrow Analysis">
+    <a href="https://arrow-kt.io/docs/inject">
+      <img src="{{ '/img/inject.svg' | relative_url }}" alt="Arrow Inject">
     </a>
-    {% include _sidebar-cat-dropdown-analysis.html %}
+    {% include _sidebar-cat-dropdown-inject.html %}
   </div>
   <div class="sidebar-menu">
-    {% for item in site.data.analysis.sidebar.options %}
+    {% for item in site.data.inject.sidebar.options %}
 
     {% comment %}
     <!-- Needed logic to show the submenu open when the active entry is an inner element -->
