--- a/docs/docs/_layouts/docs-inject.html
+++ b/docs/docs/_layouts/docs-inject.html
@@ -4,7 +4,7 @@
 
 <body id="doc-body">
   <div id="wrapper">
-    {% include _sidebar-analysis.html %}
+    {% include _sidebar-inject.html %}
     <div class="doc-content-meta">
       {% include _doc.html %}
     </div>
