--- a/docs/docs/_includes/_sidebar-cat-dropdown-inject.html
+++ b/docs/docs/_includes/_sidebar-cat-dropdown-inject.html
@@ -2,11 +2,11 @@
   <ul class="sidebar-nav">
     <li class="sidebar-nav-item">
       <a href="#" class="cat-dropdown">
-        <span class="brand-title">Arrow Analysis</span>
+        <span class="brand-title">Arrow Inject</span>
         <i class="fa fa-angle-right"></i>
       </a>
       <ul>
-        {% for item in site.data.analysis.features.content %}
+        {% for item in site.data.inject.features.content %}
         <li>
           <a href="{{ item.url | relative_url }}">
             <span>{{ item.title }}</span>
